kubernetes/apps/app-cluster/media/copyparty/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: copyparty
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: files.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "Media NFS file manager"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "https://files.krapulax.dev"
    gethomepage.dev/icon: "mdi-file-cabinet"
    gethomepage.dev/name: "Media Files"
    gethomepage.dev/weight: "30"
    uptime-kuma.krapulax.dev/accepted-statuscodes: "200-299,300-399"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - files.krapulax.dev
  rules:
    - backendRefs:
        - name: copyparty
          namespace: media
          port: 3923
